<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oxts_gad</name>
  <version>0.1.0</version>
  <description>Subscribe to ROS messages, convert them to Generic Aiding, and 
               send the data to an OxTS INS.
  </description>
  <maintainer email="smccarthy@oxts.com">smccarthy</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
